# scraper-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-github-release.yaml  release.yml
examples/: amazon_bsr_map.py  async_exception.py  emag_shop.py  open_browser.py  open_browser_example.py  page_stealth.py  scrape_emag_keyword.py  scrape_emag_listing.py  scrape_emag_shop.py  stealth_example.py  temu_search_keyword.py  test_open_browser.py
examples/emag_keyword_scrapy/: scrapy.cfg
examples/emag_keyword_scrapy/emag_keyword_scrapy/: items.py  middlewares.py  pipelines.py  settings.py
scraper_utils/constants/: __init__.py  time_constant.py  workbook_style.py
scraper_utils/enums/: __init__.py  amazon_enum.py  amazon_site_enum.py  browser_enum.py
scraper_utils/exceptions/: __init__.py  browser_exception.py  file_exception.py
scraper_utils/guis/: __init__.py
scraper_utils/meta_keys/: __init__.py  scrapy_playwright_key.py
scraper_utils/middlewares/: __init__.py  base.py  playwright_stealth.py
scraper_utils/middlewares/playwright_middlewares/: __init__.py  stealth.py
scraper_utils/models/emag_models/: __init__.py  search_page.py
scraper_utils/parsers/: __init__.py
scraper_utils/parsers/emag_parsers/: __init__.py  search_page.py
scraper_utils/parsers/playwright_page_parsers/: __init__.py
scraper_utils/parsers/playwright_page_parsers/emag/: __init__.py  search_page.py
scraper_utils/response_parsers/scrapy_response_parsers/: __init__.py
scraper_utils/scrapy_middlewares/: __init__.py  stealth_playwright_middleware.py
scraper_utils/utils/: __init__.py  allegro_url_util.py  amazon_url_util.py  amazon_util.py  browser_util.py  emag_url_util.py  emag_util.py  file_util.py  image_util.py  json_util.py  other_util.py  temu_util.py  text_util.py  time_util.py  workbook_util.py
tests/test_utils/test_file_util/: test_read.py
tests/test_utils/test_workbook_util/: test_column_convert.py
